<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/naz"
            android:background="@drawable/strelanaz"
            android:layout_width="60dp"
            android:gravity="left"
            android:layout_height="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:gravity="right"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        app:cardElevation="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/balanceAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$2,85,856.20"
            android:textSize="24sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/enamount"/>
    <EditText
        android:id="@+id/accountAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Rs. 56,000.00"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:padding="12dp"/>
</LinearLayout>