<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="18dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/elipce1"
                android:layout_marginRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/elipce2"
                android:layout_marginLeft="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailadress"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mainideas@gmail.com"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pas"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:layout_marginBottom="2dp"/>
        <Button
            android:id="@+id/resetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forpas"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/white"/>



        <Button
            android:id="@+id/log_in"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:layout_marginTop="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_centerInParent="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dpas"
                android:textColor="@color/gray"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/regButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup"
                android:textColor="@color/blue"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>